# portage

app-admin/adcli/: Manifest  adcli-0.8.2.ebuild
app-editors/visual-studio-code/: Manifest  visual-studio-code-1.15.1.ebuild  visual-studio-code-1.18.1.ebuild  visual-studio-code-1.28.1.ebuild  visual-studio-code-1.33.0.ebuild  visual-studio-code-1.36.0.ebuild
app-emulation/bwlehrpool-suite/: Manifest  bwlehrpool-suite-4.0.ebuild
app-office/projectlibre-bin/: Manifest  projectlibre-bin-1.8.0.ebuild
app-office/softmaker-freeoffice/: Manifest  softmaker-freeoffice-934.ebuild
app-shells/powershell-bin/: Manifest  powershell-bin-6.1.0.ebuild
app-text/master-pdf-editor/: Manifest  master-pdf-editor-4.2.70.ebuild
app-text/texlive-core/: texlive-core-2017-r2.ebuild
dev-db/dbeaver-ce-bin/: Manifest  dbeaver-ce-bin-7.0.0.ebuild
dev-db/opendbviewer/: Manifest  opendbviewer-1.1.1.ebuild
dev-db/sqlworkbench-bin/: Manifest  sqlworkbench-bin-124.ebuild  sqlworkbench-bin-125.ebuild
dev-dotnet/dotnet-sdk-bin/: Manifest  dotnet-sdk-bin-2.1.403.ebuild  dotnet-sdk-bin-2.2.104.ebuild
dev-java/gradle/: Manifest  gradle-4.5.1.ebuild
dev-lang/snap/: Manifest  snap-4.1.2.7.ebuild  snap-4.2.2.9.ebuild
dev-libs/caffe2/: Manifest  caffe2-0.7.0.ebuild  caffe2-0.8.1.ebuild
dev-libs/gloo/: Manifest  (+1 more)
dev-libs/libsparse/files/: 0000-include-string.h.patch  0001-remove-dependency-on-android-base-from-libsparse.patch  CMakeLists.txt
licenses/: Minecraft  PowerFolder  Triangle  cewe-fotoservice.txt  master-pdf-editor-4  softmaker-freeoffice.txt
metadata/: layout.conf
(+269 files in other folders)
